# WarLock

./: .gitignore  Cargo.toml  LICENSE  system_report.html
src/: install_disa_scapscan.rs  installed_apps.rs  main.rs  network_connections.rs  scap_scan_cli.rs  system_info.rs  upload_file_to_api  upload_scap_results.rs
