[package]
name = "system-info-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30.7"        # For CPU, memory, process info
log = "0.4"            # Logging facade
env_logger = "0.11"      # For initializing logging from env
serde = { version = "1.0", features = ["derive"] }   # (Optional) for serialization
serde_json = "1.0"        # (Optional) for JSON output
chrono = "0.4"
sha2 = "0.10"

# On Windows only, you might add:
winreg = "0.10"         # For reading Windows registry

# On Linux/macOS, you could add crates for listing installed packages
# e.g., parse commands like dpkg, rpm, brew, etc.
